# extension-manager

./: .pre-commit-config.yaml  NEWS  NEWS.md  README.md  com.mattjakeman.ExtensionManager.Devel.json  com.mattjakeman.ExtensionManager.json  extension-manager.doap  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  update-pot.yml
build-aux/: com.mattjakeman.ExtensionManager.Devel.json  com.mattjakeman.ExtensionManager.json
data/: com.mattjakeman.ExtensionManager.appdata.xml.in  com.mattjakeman.ExtensionManager.appdata.xml.in.in  com.mattjakeman.ExtensionManager.desktop.in  com.mattjakeman.ExtensionManager.desktop.in.in  com.mattjakeman.ExtensionManager.gschema.xml  com.mattjakeman.ExtensionManager.gschema.xml.in  com.mattjakeman.ExtensionManager.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/icons/hicolor/: meson.build
plugin/: README.md  extension.js  metadata.json
po/: LINGUAS  POTFILES  README.md  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_UK.po  es.po  et.po  eu.po  extension-manager.pot  fa.po  fi.po  fr.po  ga.po  hi.po  hr.po  hu.po  id_ID.mo  id_ID.po  it.po  ja.po  kk.po  ko.po  meson.build  nb.po  nl.po  nn.po  oc.po  pl.po  print-source-files.sh  pt.po  pt_BR.po  ru_RU.po  sv.po  (+6 more)
snap/: snapcraft.yaml
src/: exm-application.c  exm-application.h  exm-backtrace.c  exm-backtrace.h  exm-browse-page.blp  exm-browse-page.c  exm-browse-page.h  exm-comment-dialog.blp  exm-comment-dialog.c  exm-comment-dialog.h  exm-comment-tile.blp  exm-comment-tile.c  exm-comment-tile.h  exm-detail-view.blp  exm-detail-view.c  exm-detail-view.h  exm-error-dialog.blp  exm-error-dialog.c  exm-error-dialog.h  exm-extension-row.blp  exm-extension-row.c  exm-extension-row.h  exm-help-overlay.blp  exm-info-bar-item.blp  exm-info-bar-item.c  exm-info-bar-item.h  exm-info-bar.blp  exm-info-bar.c  exm-info-bar.h  exm-install-button.blp  exm-install-button.c  exm-install-button.h  exm-installed-page.blp  exm-installed-page.c  exm-installed-page.h  exm-rating.blp  exm-rating.c  exm-rating.h  exm-release-notes-dialog.blp  exm-release-notes-dialog.c  (+35 more)
src/dbus/: exm-manager.c  exm-manager.h
src/local/: exm-extension.c  exm-extension.h  exm-manager.c  exm-manager.h  meson.build  org.gnome.Shell.Extensions.xml  regenerate-dbus.sh  shell-dbus-interface.c  shell-dbus-interface.h
src/model/: exm-extension.c  exm-extension.h  exm-manager.c  exm-manager.h
src/res/: help-overlay.blp  release-notes.txt  suggestions.txt
src/web/: exm-comment-provider.c  exm-comment-provider.h  exm-data-provider.c  exm-data-provider.h  exm-image-resolver.c  exm-image-resolver.h  exm-request-handler.c  exm-request-handler.h  exm-search-provider.c  exm-search-provider.h  exm-search-result.c  exm-search-result.h  exm-version-provider.c  exm-version-provider.h  exm-versions-provider.c  exm-versions-provider.h  meson.build
src/web/model/: exm-comment.c  exm-comment.h  exm-search-result.c  exm-search-result.h  exm-shell-version-map.c  exm-shell-version-map.h  exm-shell-versions.c  exm-shell-versions.h  exm-version-result.c  exm-version-result.h  exm-versions-result.c  exm-versions-result.h
