exm_sources += files([
  'exm-comment-provider.c',
  'exm-data-provider.c',
  'exm-image-resolver.c',
  'exm-request-handler.c',
  'exm-search-provider.c',
  'exm-versions-provider.c',
  'model/exm-comment.c',
  'model/exm-search-result.c',
  'model/exm-shell-versions.c',
  'model/exm-version-result.c'
])
